allow to configure imagePullPolicy - this help testing with local images

--- a/charts/miggo-operator/templates/deployment.yaml
+++ b/charts/miggo-operator/templates/deployment.yaml
@@ -99,6 +99,7 @@ spec:
             {{- end }}
           {{- end }}
           image: {{ include "opentelemetry-operator.image" . | quote }}
+          imagePullPolicy: {{ .Values.manager.imagePullPolicy }}
           name: manager
           ports:
             - containerPort: {{ .Values.manager.ports.metricsPort }}
