--- a/charts/miggo-operator/templates/delayed-resources/configmap.yaml
+++ b/charts/miggo-operator/templates/delayed-resources/configmap.yaml
@@ -36,7 +36,7 @@ data:
       name: {{ .Release.Name }}
     spec:
       mode: deployment
-      imagePullPolicy: Always
+      imagePullPolicy: {{ .Values.collector.imagePullPolicy }}
       config:
         receivers:
           otlp:
