--- a/charts/miggo-operator/conf/crds/crd-opentelemetrycollector.yaml
+++ b/charts/miggo-operator/conf/crds/crd-opentelemetrycollector.yaml
@@ -1457,6 +1457,18 @@ spec:
                 type: string
               imagePullPolicy:
                 type: string
+              imagePullSecrets:
+                items:
+                  properties:
+                    name:
+                      default: ""
+                      type: string
+                  type: object
+                  x-kubernetes-map-type: atomic
+                type: array
+                x-kubernetes-list-map-keys:
+                - name
+                x-kubernetes-list-type: map
               ingress:
                 properties:
                   annotations:
@@ -3106,6 +3118,18 @@ spec:
                     type: string
                   image:
                     type: string
+                  imagePullSecrets:
+                    items:
+                      properties:
+                        name:
+                          default: ""
+                          type: string
+                      type: object
+                      x-kubernetes-map-type: atomic
+                    type: array
+                    x-kubernetes-list-map-keys:
+                    - name
+                    x-kubernetes-list-type: map
                   nodeSelector:
                     additionalProperties:
                       type: string
@@ -6024,6 +6048,18 @@ spec:
                 type: string
               imagePullPolicy:
                 type: string
+              imagePullSecrets:
+                items:
+                  properties:
+                    name:
+                      default: ""
+                      type: string
+                  type: object
+                  x-kubernetes-map-type: atomic
+                type: array
+                x-kubernetes-list-map-keys:
+                - name
+                x-kubernetes-list-type: map
               ingress:
                 properties:
                   annotations:
@@ -7691,6 +7727,18 @@ spec:
                     type: string
                   image:
                     type: string
+                  imagePullSecrets:
+                    items:
+                      properties:
+                        name:
+                          default: ""
+                          type: string
+                      type: object
+                      x-kubernetes-map-type: atomic
+                    type: array
+                    x-kubernetes-list-map-keys:
+                    - name
+                    x-kubernetes-list-type: map
                   nodeSelector:
                     additionalProperties:
                       type: string
