--- a/charts/miggo-operator/templates/updater/updater-secret.yaml
+++ b/charts/miggo-operator/templates/updater/updater-secret.yaml
@@ -1,3 +1,4 @@
+{{ if and .Values.updater.enabled  }}
 {{- if empty .Values.updater.aws.existingSecret }}
 apiVersion: v1
 kind: Secret
@@ -9,3 +10,4 @@ data:
   AWS_SECRET_ACCESS_KEY: {{ .Values.updater.aws.secretAccessKey | b64enc | quote }}
   AWS_DEFAULT_REGION: {{ .Values.updater.aws.region | b64enc | quote }}
 {{- end }}
+{{ end }}
