--- a/charts/miggo-operator/templates/updater/role.yaml
+++ b/charts/miggo-operator/templates/updater/role.yaml
@@ -1,3 +1,4 @@
+{{ if and .Values.updater.enabled  }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -14,3 +15,4 @@ rules:
   - apiGroups: ["opentelemetry.io"]
     resources: ["opentelemetrycollectors"]
     verbs: ["get", "patch"]
+{{ end }}
