add always warn

--- a/charts/miggo-operator/values.yaml
+++ b/charts/miggo-operator/values.yaml
@@ -56,12 +56,12 @@ collector:
   collectorNameSpace: ""
   collectorPort: ""
 
-  imagePullPolicy: Always
+  imagePullPolicy: Always # Keep always, for other options contact us (miggo.io)
 
   math:
     name: "miggo"
     enabled: false
-    imagePullPolicy: Always
+    imagePullPolicy: Always # Keep always, for other options contact us (miggo.io)
     image:
       repository: "miggoprod/math"
       tag: latest
@@ -86,7 +86,7 @@ collector:
 updater:
   enabled: true
   image: ""
-  imagePullPolicy: Always
+  imagePullPolicy: Always # Keep always, for other options contact us (miggo.io)
   cronjobSchedule: "10" # time in min
   collectorFileName: "config.yaml"
   mathFileName: "config.json"
@@ -107,7 +107,7 @@ updater:
 ## Provide OpenTelemetry Operator manager container image and resources.
 ##
 manager:
-  imagePullPolicy: Always
+  imagePullPolicy: Always # Keep always, for other options contact us (miggo.io)
   image:
     repository: miggoprod/miggo-operator
     tag: 0.79.0-13-g318aa9b
