No plain text secret (#13)
* merge miggo collector and operator

* fix delayed resources

* allow creator job to patch existing collector/instrumentation

* join the updaters + use inline scripts + allow the customer to use its own secret

 Date:      Tue Jul 9 13:49:54 2024 +0300

* allow specifying image secrets from existing secrets

* move collector config

* suppor image secrets for collector and agents

* bump version

* change cron job to 10

* bump version

* fix secret

* add updater to config schema

* allow to configure imagePullPolicy - this help testing with local images

* support imagePullSecrets

* add always warn

--- a/charts/miggo-operator/templates/deployment.yaml
+++ b/charts/miggo-operator/templates/deployment.yaml
@@ -99,6 +99,7 @@ spec:
             {{- end }}
           {{- end }}
           image: {{ include "opentelemetry-operator.image" . | quote }}
+          imagePullPolicy: {{ .Values.manager.imagePullPolicy }}
           name: manager
           ports:
             - containerPort: {{ .Values.manager.ports.metricsPort }}
@@ -153,10 +154,7 @@ spec:
           securityContext: {{ toYaml . | nindent 12 }}
           {{- end }}
         {{- end }}
-      {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+      {{- include "imagePullSecrets" . | nindent 6 }}
       {{- with .Values.affinity }}
       affinity: {{ toYaml . | nindent 8 }}
       {{- end }}
