--- a/charts/miggo-operator/templates/secret.yaml
+++ b/charts/miggo-operator/templates/secret.yaml
@@ -1,9 +1,9 @@
+{{- if (empty (index .Values.imagePullSecrets 0).name) }}
 apiVersion: v1
 kind: Secret
 metadata:
-  #name: {{ .Release.Name }}-dockerconfigjson
   name: regcred
-  namespace: {{ .Values.namespace }}
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ printf "{\"auths\":{\"%s\":{\"username\":\"%s\",\"password\":\"%s\"}}}" .Values.imageCredentials.registry .Values.imageCredentials.username .Values.imageCredentials.password | b64enc | quote }}
+{{- end }}
