--- a/charts/miggo-operator/values.yaml
+++ b/charts/miggo-operator/values.yaml
@@ -24,6 +24,9 @@ imageCredentials:
   username: ""
   password: ""
 
+secretsSyncer:
+  enabled: false
+
 ## Kubernetes cluster domain suffix
 clusterDomain: cluster.local
 
