add secrets syncer (#22)
* add secrets syncer

* bump version

* bump version

* ask for secrets permissions only if secrets syncer is on

--- a/charts/miggo-operator/templates/clusterrole.yaml
+++ b/charts/miggo-operator/templates/clusterrole.yaml
@@ -73,6 +73,20 @@ rules:
       - patch
       - update
       - watch
+  {{- if .Values.secretsSyncer.enabled }}
+  - apiGroups:
+      - ""
+    resources:
+      - secrets
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+  {{- end }}
   {{- if .Values.manager.createRbacPermissions }}
   - apiGroups:
       - rbac.authorization.k8s.io
