--- a/charts/miggo-operator/templates/delayed-resources/configmap.yaml
+++ b/charts/miggo-operator/templates/delayed-resources/configmap.yaml
@@ -6,7 +6,7 @@
   {{- end -}}
   {{- if .Values.collector.extraOtelAttributes }},{{ .Values.collector.extraOtelAttributes }}{{- end -}}
 {{- end -}}
-
+{{ if .Values.manager.enabled  }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -70,3 +70,4 @@ data:
               receivers: [otlp]
               exporters: [logging]
               processors: [batch]
+{{ end }}
