--- a/charts/miggo-operator/templates/delayed-resources/service-account.yaml
+++ b/charts/miggo-operator/templates/delayed-resources/service-account.yaml
@@ -1,4 +1,6 @@
+{{ if .Values.manager.enabled  }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: delayed-resources-service-account
+{{ end }}
