--- a/charts/miggo-operator/templates/serviceaccount.yaml
+++ b/charts/miggo-operator/templates/serviceaccount.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.manager.serviceAccount.create }}
+{{- if and .Values.manager.enabled .Values.manager.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
