--- a/charts/miggo-operator/templates/admission-webhooks/operator-webhook-with-cert-manager.yaml
+++ b/charts/miggo-operator/templates/admission-webhooks/operator-webhook-with-cert-manager.yaml
@@ -1,4 +1,4 @@
-{{- if and (.Values.admissionWebhooks.create) (.Values.admissionWebhooks.certManager.enabled) }}
+{{- if and (.Values.manager.enabled) (.Values.admissionWebhooks.create) (.Values.admissionWebhooks.certManager.enabled) }}
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
