--- a/charts/miggo-operator/templates/admission-webhooks/operator-webhook.yaml
+++ b/charts/miggo-operator/templates/admission-webhooks/operator-webhook.yaml
@@ -1,4 +1,4 @@
-{{- if and (.Values.admissionWebhooks.create) (not .Values.admissionWebhooks.certManager.enabled) }}
+{{- if and (.Values.manager.enabled) (.Values.admissionWebhooks.create) (not .Values.admissionWebhooks.certManager.enabled) }}
 {{- $cert := fromYaml (include "opentelemetry-operator.WebhookCert" .) }}
 {{- $caCertEnc := $cert.ca }}
 {{- $certCrtEnc := $cert.crt }}
