--- a/charts/miggo-operator/templates/delayed-resources/creator-job.yaml
+++ b/charts/miggo-operator/templates/delayed-resources/creator-job.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.manager.enabled  }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -47,3 +48,4 @@ spec:
       - name: delayed-resources
         configMap:
           name: delayed-resources-configmap
+{{ end }}
