--- a/charts/miggo-operator/templates/delayed-resources/role.yaml
+++ b/charts/miggo-operator/templates/delayed-resources/role.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.manager.enabled  }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -12,3 +13,4 @@ rules:
 - apiGroups: ["opentelemetry.io"]
   resources: ["opentelemetrycollectors", "instrumentations"]
   verbs: ["get", "list", "create", "patch", "delete"]
+{{ end }}
