--- a/charts/miggo-operator/templates/deployment.yaml
+++ b/charts/miggo-operator/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.manager.enabled  }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -186,3 +187,4 @@ spec:
       {{- end }}
       securityContext:
 {{ toYaml .Values.securityContext | indent 8 }}
+{{ end }}
