--- a/charts/miggo-operator/templates/service-role.yaml
+++ b/charts/miggo-operator/templates/service-role.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.manager.enabled  }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -26,3 +27,4 @@ roleRef:
   kind: Role
   name: opentelemetry-collector-role
   apiGroup: rbac.authorization.k8s.io
+{{ end }}
