--- a/charts/miggo-operator/templates/tests/test-certmanager-connection.yaml
+++ b/charts/miggo-operator/templates/tests/test-certmanager-connection.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.admissionWebhooks.create .Values.admissionWebhooks.certManager.enabled }}
+{{- if and .Values.manager.enabled .Values.admissionWebhooks.create .Values.admissionWebhooks.certManager.enabled }}
 apiVersion: v1
 kind: Pod
 metadata:
