--- a/charts/miggo-operator/templates/tests/test-service-connection.yaml
+++ b/charts/miggo-operator/templates/tests/test-service-connection.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.manager.enabled }}
 {{ if .Values.kubeRBACProxy.enabled }}
 ---
 apiVersion: v1
@@ -82,3 +83,4 @@ spec:
   {{- with .Values.nodeSelector }}
   nodeSelector: {{ toYaml . | nindent 4 }}
   {{- end }}
+{{ end }}
