--- a/charts/miggo-operator/values.yaml
+++ b/charts/miggo-operator/values.yaml
@@ -58,7 +58,7 @@ collector:
   
   # Tenant and Project id, format:
   # io.miggo.tenant.id=<id>,io.miggo.project.id=<id>
-  customerAttr: ""  # deprecated - use miggoTenantId, miggoProjectId, extraOtelAttributes instead
+  customerAttr: ""  # deprecated - use miggo.tenantId, miggo.projectId, extraOtelAttributes instead
   extraOtelAttributes: ""
 
   # If one collector deployed for diff namesapces, specify false, and collector namespace
