--- a/charts/miggo-operator/templates/delayed-resources/configmap.yaml
+++ b/charts/miggo-operator/templates/delayed-resources/configmap.yaml
@@ -2,11 +2,11 @@
   {{- if .Values.collector.customerAttr -}}
     {{ .Values.collector.customerAttr }}
   {{- else -}}
-    io.miggo.tenant.id={{ .Values.collector.miggoTenantId }},io.miggo.project.id={{ .Values.collector.miggoProjectId }}
+    io.miggo.tenant.id={{ .Values.miggo.tenantId }},io.miggo.project.id={{ .Values.miggo.projectId }}
   {{- end -}}
   {{- if .Values.collector.extraOtelAttributes }},{{ .Values.collector.extraOtelAttributes }}{{- end -}}
 {{- end -}}
-
+{{ if .Values.manager.enabled  }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -70,3 +70,4 @@ data:
               receivers: [otlp]
               exporters: [logging]
               processors: [batch]
+{{ end }}
