--- a/charts/miggo-operator/templates/k8s-read/deployment.yaml
+++ b/charts/miggo-operator/templates/k8s-read/deployment.yaml
@@ -34,26 +34,28 @@ spec:
         imagePullPolicy: {{ .Values.k8sread.imagePullPolicy }}
         args:
           - --cluster-name={{ .Values.k8sread.clusterName }}
-          - --tenant-name={{ .Values.collector.miggoTenantId }}
-          - --project-name={{ .Values.collector.miggoProjectId }}
+          - --tenant-name={{ .Values.miggo.tenantId }}
+          - --project-name={{ .Values.miggo.projectId }}
           - --otlp-endpoint={{ if .Values.k8sread.otlp.otlpEndpoint }}{{ .Values.k8sread.otlp.otlpEndpoint }}{{ else }}{{ include "collectorAddress" . }}:{{ .Values.k8sread.otlp.otlpPort }}{{ end }}
-          {{- if .Values.k8sread.otlp.httpAuthHeader }}--otlp-auth-header={{- .Values.k8sread.otlp.httpAuthHeader }}{{- end}}
           - --tls-skip-verify={{ .Values.k8sread.otlp.tlsSkipVerify }}
           - --stdout={{ .Values.k8sread.stdout }}
           - --port={{ .Values.k8sread.healthcheck.port }}
+        env:
+          {{ if .Values.k8sread.otlp.httpAuthHeader }}
+          - name: K8S_READ_OTLP_AUTH_HEADER
+            value: "{{ .Values.k8sread.otlp.httpAuthHeader }}"
+          {{ end}}
         ports:
         - containerPort: {{ .Values.k8sread.healthcheck.port }}
         livenessProbe:
           httpGet:
             path: /health
             port: {{ .Values.k8sread.healthcheck.port }}
-          initialDelaySeconds: 10
           periodSeconds: 10
         readinessProbe:
           httpGet:
             path: /health
             port: {{ .Values.k8sread.healthcheck.port }}
-          initialDelaySeconds: 10
           periodSeconds: 10
         resources: {{ toYaml .Values.k8sread.resources | nindent 12 }}
       {{- with .Values.affinity }}
