increase k8s read resources

--- a/charts/miggo-operator/values.yaml
+++ b/charts/miggo-operator/values.yaml
@@ -142,11 +142,11 @@ k8sread:
   podAnnotations: {}
   resources:
     limits:
-      cpu: 100m
-      memory: 256Mi
+      cpu: 500m
+      memory: 1Gi
     requests:
       cpu: 100m
-      memory: 128Mi
+      memory: 512Mi
   serviceAccount:
     create: true
     annotations: {}
