add image pull secrets to k8s read

--- a/charts/miggo-operator/templates/k8s-read/deployment.yaml
+++ b/charts/miggo-operator/templates/k8s-read/deployment.yaml
@@ -27,6 +27,7 @@ spec:
       labels:
         app: k8s-read
     spec:
+      {{- include "imagePullSecrets" . | nindent 6 }}
       serviceAccountName: k8s-read-sa
       containers:
       - name: k8s-read
